kubernetes/deployment.yaml
# Pour déployer:
# kubectl --kubeconfig la-config.yaml apply -f deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lmz
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: loiczhu/esgi-4al2-devops-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  namespace: lmz
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 4566
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: lmz
  labels:
    app.kubernetes.io/component: controller
  # Mettre un nom unique pour la classe ingress
  name: nginx-frontend
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: lmz
  annotations:
    # Ajouter une annotation pour indiquer l'issuer à utiliser. letsencrypt-staging-cluster-issuer OU letsencrypt-cluster-issuer
    # Il s'agit d'issuers globaux que j'ai rajouté sur le cluster, pas besoin de créer votre propre cert-manager
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  # Récupérer le nom de la classe ingress ici
  ingressClassName: nginx-frontend
  tls:
    - hosts:
        - frontend.4al2.lmz.jbienvenu.fr
      secretName: frontend-tls
  rules:
    - host: frontend.4al2.lmz.jbienvenu.fr
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-service
                port:
                  number: 4566
